# noter

./: pyproject.toml  rundev.sh
migrations/: env.py
migrations/versions/: 004be369b4ba_add_users_table.py  3313c893d9a3_add_notes_table.py  ed1cd49f1efe_create_notes_table.py
noter/: app.py
noter/models/db/: note.py  user.py
noter/models/db/meta/: __init__.py
noter/models/val/: note.py  user.py
noter/models/val/meta/: __init__.py
noter/routes/: auth.py  notes.py
noter/utils/: auth.py  constants.py  db.py  environ.py  exceptions.py
